force-app/main/default/objects/Inventaire__c/Inventaire__c.object-meta.xml
<CustomObject>
    <description>Objet représentant les Inventaires de chaque vente.</description>
    <label>Inventaire</label>
    <nameField>
        <displayFormat>Inventaire-{0000}</displayFormat>
        <label>Inventaire Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>