force-app/main/default/objects/Inventaire__c/fields/Benefice__c.field-meta.xml
<CustomField>
    <fullName>Benefice__c</fullName>
    <description>Champs represantant les benefice de la vente</description>
    <formula>ConsommationMoyenneMensuel__c</formula>
    <label>Benefice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>