force-app/main/default/objects/Inventaire__c/fields/Montant__c.field-meta.xml
<CustomField>
    <fullName>Montant__c</fullName>
    <description>C&apos;est le montant de la caisse au moment de l&apos;inventaire</description>
    <label>Montant</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>