force-app/main/default/objects/Inventaire__c/listViews/Inventaires.listView-meta.xml
<ListView>
    <fullName>Inventaires</fullName>
    <columns>NAME</columns>
    <columns>Benefice__c</columns>
    <columns>Montant__c</columns>
    <filterScope>Mine</filterScope>
    <label>Inventaires</label>
</ListView>